Fix DOM Element handling for components inside Element abstraction

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <button class="sl-button sl-js-button">Click me!</button>
+  <div class="sl-textfield sl-js-textfield">
+    <label class="sl-textfield__label">Label</label>
+    <input class="sl-textfield__input" />
+  </div>
   <script src="/dist/strongline-ui.js"></script>
 </body>
 
